updated fundamentals classification notebook for better batching

--- a/010_Fundamentals/PhishingModel.ipynb
+++ b/010_Fundamentals/PhishingModel.ipynb
@@ -135,19 +135,15 @@
    "source": [
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "def batch_predictor(ds, infield, match, outfield, batch_size=32, labels=False):\n",
+    "def batch_predictor(ds, infield, match, outfield, batch_size=256, labels=False):\n",
     "    res = []\n",
     "    data = DataLoader(ds, batch_size=batch_size)\n",
     "    i = 0\n",
     "    for batch in data:\n",
     "        print(f'\\r[*] Predicting [{i:05d}]', flush=True, end='')\n",
-    "        if labels:\n",
-    "            p = [predict(t)[0][outfield] for t in batch[infield]]\n",
-    "        else:\n",
-    "            p = [predict(t)[0][outfield] == match for t in batch[infield]]\n",
+    "        p = [t[outfield] == match for t in predict(batch[infield])]\n",
     "        res.extend(p)\n",
     "        i += batch_size\n",
-    "    print('')\n",
     "    return res"
    ]
   },
@@ -182,7 +178,7 @@
    "source": [
     "# confusion matrix example using test/train split.\n",
     "y_test = [t['label'] == 'phishing' for t in test]\n",
-    "y_pred = batch_predictor(test, 'text', 'phishing', 'label', batch_size=128)\n",
+    "y_pred = batch_predictor(test, 'text', 'phishing', 'label', batch_size=256)\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "\n",
     "accuracy = (cm[0][0] + cm[1][1]) / test.num_rows\n",
