minor tweaks on print statements

--- a/010_Fundamentals/PhishingModel.ipynb
+++ b/010_Fundamentals/PhishingModel.ipynb
@@ -182,7 +182,7 @@
     "cm = confusion_matrix(y_test, y_pred)\n",
     "\n",
     "accuracy = (cm[0][0] + cm[1][1]) / test.num_rows\n",
-    "print(f'Calculated Model Accuracy = {accuracy:02f}')\n",
+    "print(f'\\r\\n[*] Calculated Model Accuracy = {accuracy:02f}')\n",
     "\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=['Negative', 'Positive'])\n",
     "_ = disp.plot(cmap=plt.cm.Blues)"
@@ -372,6 +372,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ebbe0820-77ad-4f5d-a66d-0a484eb3efe9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ecbc130-7a15-4f64-bdc2-5d4beb5fef63",
    "metadata": {},
    "outputs": [],
    "source": []
