cleared inference book

--- a/022_LargeLanguageModels/inference.ipynb
+++ b/022_LargeLanguageModels/inference.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4764d8b6-e9f5-4c56-ab23-754a2c9b5bdc",
    "metadata": {},
    "outputs": [],
@@ -46,49 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "82947277-df1f-4f70-b02b-b4ec5cb1b5df",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <style>\n",
-       "        pre {\n",
-       "            white-space: pre-wrap;\n",
-       "        }\n",
-       "    </style>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n",
-      "==((====))==  Unsloth 2024.11.7: Fast Llama patching. Transformers = 4.46.2.\n",
-      "   \\\\   /|    GPU: NVIDIA GeForce RTX 4090. Max memory: 23.988 GB. Platform = Linux.\n",
-      "O^O/ \\_/ \\    Pytorch: 2.5.1+cu124. CUDA = 8.9. CUDA Toolkit = 12.4.\n",
-      "\\        /    Bfloat16 = TRUE. FA [Xformers = 0.0.28.post3. FA2 = False]\n",
-      " \"-____-\"     Free Apache license: http://github.com/unslothai/unsloth\n",
-      "Unsloth: Fast downloading is enabled - ignore downloading bars which are red colored!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Unsloth 2024.11.7 patched 32 layers with 32 QKV layers, 32 O layers and 32 MLP layers.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import warnings\n",
@@ -127,29 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "093a9a6f-7acd-4ae3-9363-e8616971ca0b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <style>\n",
-       "        pre {\n",
-       "            white-space: pre-wrap;\n",
-       "        }\n",
-       "    </style>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import TextStreamer\n",
     "\n",
@@ -169,47 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "960bde9a-d5fe-446e-a795-eee951c2a063",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <style>\n",
-       "        pre {\n",
-       "            white-space: pre-wrap;\n",
-       "        }\n",
-       "    </style>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<|begin_of_text|>\n",
-      "Below is an instruction that describes a task, paired with an input that provides further context.\n",
-      "Write a response that appropriately completes the request.\n",
-      "\n",
-      "### Instruction:\n",
-      "What is the nature of the last question I posed to you?\n",
-      "\n",
-      "### Input:\n",
-      "\n",
-      "\n",
-      "### Response:\n",
-      "The last question posed to me was about the implications of the current situation, particularly regarding the role of technology in the lives of those who may not be as tech-savvy as others. I emphasized the importance of recognizing that while technology can be a tool for empowerment, it can also become a barrier for those who do not have the same level of familiarity. This sentiment is crucial in fostering a more inclusive environment where everyone can benefit from the advancements in technology without feeling left behind.<|end_of_text|>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "_ = unsloth.FastLanguageModel.for_inference(model)\n",
     "\n",
@@ -219,7 +124,7 @@
     "    text_streamer = TextStreamer(tokenizer)\n",
     "    _ = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 4096)\n",
     "\n",
-    "query_model('What is the nature of the last question I posed to you?')\n",
+    "query_model('Write a blog in the style of Joff Thyer about password policies and encryption.')\n",
     "\n"
    ]
   },
