changed epochs and other text in Neural_Networks and text in Supervised_Learning

--- a/020_SupervisedLearning/Supervised_Learning.ipynb
+++ b/020_SupervisedLearning/Supervised_Learning.ipynb
@@ -545,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Class Challenge Excersise\n",
+    "# Class Challenge Exercise\n",
     "\n",
     "There is another Scikit Learn supervised learning method called Gradient Boosting Machine (GBM) that could potentially be used as a binary classifier for our phishing data. Your challenge is to use the code above as a template and fit the data to a GBM model.  Is the accuracy better or worse than our previous models?\n"
    ]
