--- a/021_NeuralNetworks/Neural_Networks.ipynb
+++ b/021_NeuralNetworks/Neural_Networks.ipynb
@@ -443,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "historical_srnn  = model_srnn.fit(x_train,y_train, epochs=20, batch_size=16, validation_data=(x_test,y_test))"
+    "historical_srnn  = model_srnn.fit(x_train,y_train, epochs=10, batch_size=16, validation_data=(x_test,y_test))"
    ]
   },
   {
@@ -605,7 +605,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "historical_lstm  = model_lstm.fit(x_train,y_train, epochs=20, batch_size=16, validation_data=(x_test,y_test))"
+    "historical_lstm  = model_lstm.fit(x_train,y_train, epochs=10, batch_size=16, validation_data=(x_test,y_test))"
    ]
   },
   {
@@ -709,7 +709,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "historical_bi  = model_bi.fit(x_train,y_train, epochs=20, batch_size=16, validation_data=(x_test,y_test))"
+    "historical_bi  = model_bi.fit(x_train,y_train, epochs=10, batch_size=16, validation_data=(x_test,y_test))"
    ]
   },
   {
@@ -813,7 +813,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "historical_gru = model_gru.fit(x_train,y_train, epochs=20, batch_size=16, validation_data=(x_test,y_test))"
+    "historical_gru = model_gru.fit(x_train,y_train, epochs=10, batch_size=16, validation_data=(x_test,y_test))"
    ]
   },
   {
@@ -907,9 +907,15 @@
    "id": "d502a959-b0af-4042-8bfb-4226b5026705",
    "metadata": {},
    "source": [
-    "Further questions and CTF question ideas.\n",
-    "- What is the accuracy of a model if we have the student train longer or add or subtract layers?\n",
-    "- "
+    "# Class Challenge Exercise\n",
+    "\n",
+    "Notice that all of the neural networks we trained in this notebook were not deep learning in the sense that they consisted of one hidden layer.  Tensorflow allows us to stack layers sequentially to make larger networks, however as we seen with accuracy results, more complicated is not always better.  Your challenge is to create a deep learning model that out performs the highest accuracy acheived from all the models tested so far (should be 98.4%).\n",
+    "\n",
+    "Some suggestions:\n",
+    "\n",
+    "- Create more dense neural networks with more layers \n",
+    "- Increase the number of epochs\n",
+    "- Ask an LLM for more ideas..."
    ]
   }
  ],
@@ -929,7 +935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
