changed text in Neural_Networks

--- a/021_NeuralNetworks/Neural_Networks.ipynb
+++ b/021_NeuralNetworks/Neural_Networks.ipynb
@@ -909,7 +909,7 @@
    "source": [
     "# Class Challenge Exercise\n",
     "\n",
-    "Notice that all of the neural networks we trained in this notebook were not deep learning in the sense that they consisted of one hidden layer.  Tensorflow allows us to stack layers sequentially to make larger networks, however as we seen with accuracy results, more complicated is not always better.  Your challenge is to create a deep learning model that out performs the highest accuracy acheived from all the models tested so far (should be 98.4%).\n",
+    "Notice that all of the neural networks we trained in this notebook were not deep learning in the sense that they consisted of one hidden layer.  Tensorflow allows us to stack layers sequentially to make larger networks, however as we seen with accuracy results, more complicated is not always better.  Your challenge is to create a deep learning model that out performs the highest accuracy acheived from all the models tested so far. Can you get above %98.5?\n",
     "\n",
     "Some suggestions:\n",
     "\n",
