--- a/021_NeuralNetworks/Neural_Networks.ipynb
+++ b/021_NeuralNetworks/Neural_Networks.ipynb
@@ -662,7 +662,7 @@
    "outputs": [],
    "source": [
     "cnf = confusion_matrix(y_test,y_pred)\n",
-    "ax = ConfusionMatrixDisplay(confusion_matrix=cnf,display_labels=['pishing','normal'])\n",
+    "ax = ConfusionMatrixDisplay(confusion_matrix=cnf,display_labels=['phishing','normal'])\n",
     "ax.plot()\n",
     "plt.title(\"Confusion Matrix\")\n",
     "plt.show()"
@@ -866,15 +866,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d0e7eed0-d897-4742-abd0-14d14a63c7c8",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cnf_gru = confusion_matrix(y_test,y_pred_gru)\n",
-    "ax_gru = ConfusionMatrixDisplay(confusion_matrix=cnf_gru,display_labels=['Pishing','normal'])\n",
+    "ax_gru = ConfusionMatrixDisplay(confusion_matrix=cnf_gru,display_labels=['phishing','normal'])\n",
     "ax_gru.plot()\n",
     "plt.show()"
    ]
@@ -935,7 +931,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
